--- a/ds421_ret_r_code.Rmd
+++ b/ds421_ret_r_code.Rmd
@@ -12,12 +12,61 @@ library(tidyverse)
 
 ```
 
+```{r create file structure}
 
-```{r download school data files}
+# create raw data file
+if(!dir.exists("raw_data")) {
+  dir.create("raw_data")
+}
+
+if(!dir.exists("intermediate_data")) {
+  dir.create("intermediate_data")
+}
+
+```
+
+
+```{r download, read, and save school addresses}
+
+# download school addresses
+download.file(
+  url = "https://www.cde.ca.gov/schooldirectory/report?rid=dl1&tp=txt", 
+  destfile = 
+    file.path(
+      "raw_data", 
+      "public_school_directory.rdata"
+    )
+    
+)
+
+# read school addresses into 
+public_school_directory <-
+    read_delim(file =
+                 file.path(
+                   "raw_data", 
+                   "public_school_directory.rdata"
+                 ),
+               delim = "\t"
+               )
+
+# save school addresses
+save(
+  public_school_directory, 
+  file = 
+    file.path(
+      "intermediate_data", 
+      "public_school_directory.rdata"
+    )
+)
+
+```
+
+
+```{r download school enrollment data}
 
 # school enrollment data by racial/ethnic designation, gender, and grade
 
-# make school file downloader function
+# make school enrollment raw downloader function
 school_enrollment_raw_downloader <-
   function(start_year_numeric){
     end_year_chr <- 
@@ -62,141 +111,58 @@ map(
   .x = start_years
 )
 
+
+
 ```
 
 
     
-```{r read school data files}
+```{r read school primary short enrollment data files}
 
+# make school primary short data file downloader function
+school_primary_short_enrollment_raw_downloader <-
+  function(start_year_numeric){
+    end_year_chr <- 
+      as.character(start_year_numeric + 1) %>%  # add 1 to the start year
+      substr(3, 4)  # get only the last two digits
+    
+    start_year_chr <- 
+      as.character(start_year_numeric) %>%   # convert start year to numeric
+      substr(3, 4)  # get only the last two digits
+    url_file <- 
+      str_c(
+        "http://dq.cde.ca.gov/dataquest/dlfile/dlfile.aspx?cLevel=School&cYear=", 
+        start_year_chr, 
+        end_year_chr, 
+        "&cCat=ShortTermEnrl&cPage=filesenrps.asp"
+        )
+            download.file(
+      url = url_file, 
+      destfile = 
+        file.path(
+          "raw_data", 
+          str_c("school_primary_short_enrollment_", 
+                start_year_chr,
+                "_", 
+                end_year_chr, 
+                "_raw.txt")
+        )
+    )
+  }
 
+# make vector of starting years 2009-2018
+start_years <- 
+  seq(
+    from = 2009,
+    to = 2018, 
+    by = 1
+  )
 
-
-# 2009-10&cCat=Enrollment&cPage=filesenr.asp")
-#       
-#     download.file(
-#       
-#     )
-#            }
-# 
-# download.file(
-#   url = "http://dq.cde.ca.gov/dataquest/dlfile/dlfile.aspx?cLevel=School&cYear=2009-10&cCat=Enrollment&cPage=filesenr.asp", 
-#   destfile = 
-#     file.path(
-#       "raw_data", 
-#       "school_enrollment_2009_10.txt")
-# )
-# 
-# 
-# 
-# school_enrollment_2009_10 <- 
-#   read_delim(file =
-#                "http://dq.cde.ca.gov/dataquest/dlfile/dlfile.aspx?cLevel=School&cYear=2009-10&cCat=Enrollment&cPage=filesenr.asp", 
-#              delim = "\t")
-# 
-# school_enrollment_2010_11 <- 
-#   read_delim(file =
-#                "http://dq.cde.ca.gov/dataquest/dlfile/dlfile.aspx?cLevel=School&cYear=2010-11&cCat=Enrollment&cPage=filesenr.asp", 
-#              delim = "\t")
-# 
-# school_enrollment_2011_12 <- 
-#   read_delim(file =
-#                "http://dq.cde.ca.gov/dataquest/dlfile/dlfile.aspx?cLevel=School&cYear=2011-12&cCat=Enrollment&cPage=filesenr.asp", 
-#              delim = "\t")
-# 
-# school_enrollment_2012_13 <- 
-#   read_delim(file =
-#                "http://dq.cde.ca.gov/dataquest/dlfile/dlfile.aspx?cLevel=School&cYear=2012-13&cCat=Enrollment&cPage=filesenr.asp", 
-#              delim = "\t")
-# 
-# school_enrollment_2013_14 <- 
-#   read_delim(file =
-#                "http://dq.cde.ca.gov/dataquest/dlfile/dlfile.aspx?cLevel=School&cYear=2013-14&cCat=Enrollment&cPage=filesenr.asp", 
-#              delim = "\t")
-# 
-# school_enrollment_2014_15 <- 
-#   read_delim(file =
-#                "http://dq.cde.ca.gov/dataquest/dlfile/dlfile.aspx?cLevel=School&cYear=2014-15&cCat=Enrollment&cPage=filesenr.asp", 
-#              delim = "\t")
-# 
-# school_enrollment_2015_16 <- 
-#   read_delim(file =
-#                "http://dq.cde.ca.gov/dataquest/dlfile/dlfile.aspx?cLevel=School&cYear=2015-16&cCat=Enrollment&cPage=filesenr.asp", 
-#              delim = "\t")
-# 
-# school_enrollment_2016_17 <- 
-#   read_delim(file =
-#                "http://dq.cde.ca.gov/dataquest/dlfile/dlfile.aspx?cLevel=School&cYear=2016-17&cCat=Enrollment&cPage=filesenr.asp", 
-#              delim = "\t")
-# 
-# school_enrollment_2017_18 <- 
-#   read_delim(file =
-#                "http://dq.cde.ca.gov/dataquest/dlfile/dlfile.aspx?cLevel=School&cYear=2017-18&cCat=Enrollment&cPage=filesenr.asp", 
-#              delim = "\t")
-# 
-# school_enrollment_2018_19 <- 
-#   read_delim(file =
-#                "http://dq.cde.ca.gov/dataquest/dlfile/dlfile.aspx?cLevel=School&cYear=2018-19&cCat=Enrollment&cPage=filesenr.asp", 
-#              delim = "\t")
-# 
-# 
-# # primary and short-term enrollment
-# school_primary_short_enrollment_2009_10 <- 
-#   read_delim(file =
-#                "http://dq.cde.ca.gov/dataquest/dlfile/dlfile.aspx?cLevel=School&cYear=0910&cCat=ShortTermEnrl&cPage=filesenrps.asp", 
-#              delim = "\t")
-# 
-# school_primary_short_enrollment_2010_11 <- 
-#   read_delim(file =
-#                "http://dq.cde.ca.gov/dataquest/dlfile/dlfile.aspx?cLevel=School&cYear=1011&cCat=ShortTermEnrl&cPage=filesenrps.asp", 
-#              delim = "\t")
-# 
-# school_primary_short_enrollment_2011_12 <- 
-#   read_delim(file =
-#                "http://dq.cde.ca.gov/dataquest/dlfile/dlfile.aspx?cLevel=School&cYear=1112&cCat=ShortTermEnrl&cPage=filesenrps.asp", 
-#              delim = "\t")
-# 
-# school_primary_short_enrollment_2012_13 <- 
-#   read_delim(file =
-#                "http://dq.cde.ca.gov/dataquest/dlfile/dlfile.aspx?cLevel=School&cYear=1213&cCat=ShortTermEnrl&cPage=filesenrps.asp", 
-#              delim = "\t")
-# 
-# school_primary_short_enrollment_2013_14 <- 
-#   read_delim(file =
-#                "http://dq.cde.ca.gov/dataquest/dlfile/dlfile.aspx?cLevel=School&cYear=1314&cCat=ShortTermEnrl&cPage=filesenrps.asp", 
-#              delim = "\t")
-# 
-# school_primary_short_enrollment_2014_15 <- 
-#   read_delim(file =
-#                "http://dq.cde.ca.gov/dataquest/dlfile/dlfile.aspx?cLevel=School&cYear=1415&cCat=ShortTermEnrl&cPage=filesenrps.asp", 
-#              delim = "\t")
-# 
-# school_primary_short_enrollment_2015_16 <- 
-#   read_delim(file =
-#                "http://dq.cde.ca.gov/dataquest/dlfile/dlfile.aspx?cLevel=School&cYear=1516&cCat=ShortTermEnrl&cPage=filesenrps.asp", 
-#              delim = "\t")
-# 
-# school_primary_short_enrollment_2016_17 <- 
-#   read_delim(file =
-#                "http://dq.cde.ca.gov/dataquest/dlfile/dlfile.aspx?cLevel=School&cYear=1617&cCat=ShortTermEnrl&cPage=filesenrps.asp", 
-#              delim = "\t")
-# 
-# school_primary_short_enrollment_2017_18 <- 
-#   read_delim(file =
-#                "http://dq.cde.ca.gov/dataquest/dlfile/dlfile.aspx?cLevel=School&cYear=1718&cCat=ShortTermEnrl&cPage=filesenrps.asp", 
-#              delim = "\t")
-# 
-# school_primary_short_enrollment_2018_19 <- 
-#   read_delim(file =
-#                "http://dq.cde.ca.gov/dataquest/dlfile/dlfile.aspx?cLevel=School&cYear=1819&cCat=ShortTermEnrl&cPage=filesenrps.asp", 
-#              delim = "\t")
-# 
-# 
-# # school data
-# public_school_data_file <- 
-#     read_delim(file =
-#                "https://www.cde.ca.gov/schooldirectory/report?rid=dl1&tp=txt", 
-#                delim = "\t")
-  
+# download all the school files at once
+map(
+  .f = school_primary_short_enrollment_raw_downloader, 
+  .x = start_years
+)
 
 ```
 
