description, here you are

--- a/ds421_ret_r_code.Rmd
+++ b/ds421_ret_r_code.Rmd
@@ -111,6 +111,10 @@ map(
   .x = start_years
 )
 
+# read them all into r from tab-delimited files
+
+
+
 
 
 ```
@@ -163,6 +167,9 @@ map(
   .f = school_primary_short_enrollment_raw_downloader, 
   .x = start_years
 )
+
+# read them all into r from tab-delimited files
+
 
 ```
 
