--- a/ds421_ret_r_code.Rmd
+++ b/ds421_ret_r_code.Rmd
@@ -5,12 +5,15 @@ date: "August 4, 2019"
 output: html_document
 ---
 
-
 ```{r load libraries}
 
 library(tidyverse)
+library(praise)
+
+praise()  # self-esteem boost
 
 ```
+
 
 ```{r create file structure}
 
@@ -36,18 +39,17 @@ download.file(
       "raw_data", 
       "public_school_directory.rdata"
     )
-    
-)
+  )
 
 # read school addresses into tibble
 public_school_directory <-
-    read_delim(file =
-                 file.path(
-                   "raw_data", 
-                   "public_school_directory.rdata"
+  read_delim(file =
+               file.path(
+                 "raw_data",
+                 "public_school_directory.rdata"
                  ),
-               delim = "\t"
-               )
+             delim = "\t"
+             )
 
 # save school addresses
 save(
@@ -111,27 +113,7 @@ map(
   .x = start_years
 )
 
-# read them all into r from tab-delimited files
-school_enrollment_2009_10_working <- 
-  read_delim(
-    file = 
-      file.path(
-        "raw_data", 
-        "school_enrollment_2009_10_raw.rdata"
-        ),
-    delim = "\t"
-    )
-
-school_enrollment_2009_10_working <- 
-  read_delim(
-    file = 
-      file.path(
-        "raw_data", 
-        "school_enrollment_2009_10_raw.rdata"
-        ),
-    delim = "\t"
-    )
-
+# make function to read them all into r from tab-delimited files
 school_enrollment_tab_reader <- 
   function(start_year_numeric){
     
@@ -165,10 +147,11 @@ school_enrollment_tab_reader <-
         delim = "\t"
         )
     
-    assign(variable_name, read_tibble)
+    assign(variable_name, 
+           read_tibble)
     
     save(
-      read_tibble, 
+      list = variable_name, 
       file = 
         file.path(
           "intermediate_data", 
@@ -179,25 +162,15 @@ school_enrollment_tab_reader <-
         )
     )
     
-    return(read_tibble)
+    # return(read_tibble)
   }
 
-# test function on all files
-test <- 
-  school_enrollment_tab_reader(2009)
-
-load(
-  file = 
-    file.path(
-      "intermediate_data", 
-      "school_enrollment_2009_10_working.rdata"
-    )
+# use function on all files
+map(
+  .f = school_enrollment_tab_reader, 
+  .x = start_years
 )
   
-
-  
-  
-
 ```
 
 
@@ -253,10 +226,69 @@ map(
   .x = start_years
 )
 
-# function to read tab-delimited files
-tab_reader <- 
-  function()
+# make function to read them all into r from tab-delimited files
+school_primary_short_enrollment_tab_reader <- 
+  function(start_year_numeric){
+    
+    end_year_chr <- 
+      as.character(start_year_numeric + 1) %>% 
+      substr(3, 4)  # get only the last two digits
+    
+    start_year_chr <- 
+      as.character(start_year_numeric)
+    
+    file_name <- 
+      str_c("school_primary_short_enrollment_", 
+            start_year_chr, 
+            "_", 
+            end_year_chr, 
+            "_raw.txt")
+      
+    variable_name <- 
+      str_c("school_primary_short_enrollment_", 
+            start_year_chr, 
+            "_", 
+            end_year_chr, 
+            "_working")
+    
+    read_tibble <- 
+      read_delim(
+        file = 
+          file.path(
+            "raw_data", 
+            file_name),
+        delim = "\t"
+        )
+    
+    assign(variable_name, 
+           read_tibble)
+    
+    save(
+      list = variable_name, 
+      file = 
+        file.path(
+          "intermediate_data", 
+          str_c(
+            variable_name, 
+            ".rdata"
+          )
+        )
+    )
+    
+    # return(read_tibble)
+  }
 
+# use function on all files
+map(
+  .f = school_primary_short_enrollment_tab_reader, 
+  .x = start_years
+)
+
+
+```
+
+
+```{r download raw 2017 facility emissions data}
 
 ```
 
